# esp-debug-backend

./: .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: issue_comment.yml  new_issues.yml  new_prs.yml  release_pypi.yml
debug_backend/: gdb.py
src/esp_debug_backend/: gdb.py
