[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "esp-debug-backend"
version = "1.0.0"
authors = [
  { name="Alexey Gerenkov", email="alexey.gerenkov@espressif.com" },
  { name="Andrei Gramakov", email="andrei.gramakov@espressif.com" },
]
description = "This package is a library built on top of pygdbmi providing high-level API for debugging programs using GDB and OpenOCD."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
  "pygdbmi<0.10",
]

[project.urls]
"Homepage" = "https://github.com/espressif/esp-debug-backend"
"Bug Tracker" = "https://github.com/espressif/esp-debug-backend/issues"
